--- a/Proj2 SenateBus/makefile
+++ b/Proj2 SenateBus/makefile
@@ -3,7 +3,7 @@ CFLAGS = -g -pthread
 
 PROGRAMS = main render
 
-all: $(PROGRAMS)
-
+main: main.c render.h render.c
+	gcc -g -pthread -o main main.c render.c
 clean:
 	rm -f *- $(PROGRAMS)
